# reminder

./: .coverage  .gitignore  README.md  coverage.xml  pyproject.toml  reminder.py  tests.py  tox.ini
.github/ISSUE_TEMPLATE/: questions.md
.github/workflows/: check.yaml
