[tool.poetry]
name = "reminder"
version = "0.1.0"
description = "This is my 1st Python project"
authors = ["Kealy Slupsky <kealy.slupsky@pqa.ca>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
click = "^8.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.1.0"
flake8 = "5.0.4"
pre-commit = "^3.1.1"
tox = "3.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
